<resources>
    <string name="app_name">Reciclar com Criatividade1</string>
    <string name="entrar">Entrar</string>
    <string name="text_cadastro">Crie uma conta clicando aqui</string>
    <string name="title_cadastro">Cadastre-se</string>
    <string name="bt_materiais">Materiais</string>
    <string name="text_tela_materiais">Escolha seu material</string>
    <string name="bt_plastico">Plástico</string>
    <string name="bt_vidro">Vidro</string>
    <string name="bt_madeira">Madeira</string>
    <string name="bt_isopor">Isopor</string>
    <string name="bt_metal">Metal</string>
    <string name="bt_papelao">Papelão</string>
    <string name="text_ideia">Escolha sua Idéia</string>
    <string name="materiais">Materiais:</string>
    <string name="passo_a_passo">Passo a Passo:</string>
    <string name="text_app">Reciclar com Criatividade</string>
    <string name="text_garrafa_pet">Plantar na garrafa de 5L</string>
    <string name="text_plantar_na_garrafa_de_5L">Este método de plantio se chama hidroponia, onde
\ você pode plantar salsa, cebolinha,  salsão, alface e
\ rúcula.Sempre tenha preferência para vegetais folhosos que se adaptam melhor.</string>
    <string name="role">Rolar a tela para ver o conteúdo</string>
    <string name="materiais_plantar_na_garrafa_de_5L">Uma garrafa de água 5L, 3 copos descartáveis, tesoura, alicate de corte, caneta, sementes ou mudas de sua
\ preferência, terra, água e estilete.</string>
    <string name="text_1passo_plantar_na_garrafa_de_5L">Pegue a garrafa e tire o rótulo com o estilete.</string>
    <string name="text_2passo_plantar_na_garrafa_de_5L">Retire a alça com auxílio do alicate de corte.</string>
    <string name="text_3passo_plantar_na_garrafa_de_5L">Pegue um copo e use como molde, faça 3 círculos
\ na garrafa, com espaços iguais entre eles.</string>
    <string name="text_4passo_plantar_na_garrafa_de_5L">Corte com um ferro quente ou com tesoura o círculo feito
\ a caneta na garrafa, faça o corte um pouco menor que
\ o círculo para as bordas o copo ficarem apoiadas na garrafa.</string>
    <string name="text_5passo_plantar_na_garrafa_de_5L">Faça 4 cortes espaçados na borda do fundo dos copos .</string>
    <string name="text_6passo_plantar_na_garrafa_de_5L">Coloque os copos nos buracos da garrafa e coloque a terra.</string>
    <string name="text_7passo_plantar_na_garrafa_de_5L">Plante sua semente ou sua muda no copo.</string>
    <string name="text_8passo_plantar_na_garrafa_de_5L">Regue com água os copos plantados.</string>
    <string name="text_9passo_plantar_na_garrafa_de_5L">Retire um dos copos e coloque água dentro da garrafa
\ pelo buraco até pegar 1 centimetro do fundo do copo e
\ faça alguns furos na garrafa para circular o ar, isso
\ fará com que o ambiente dentro da garrafa não fique muito quente para as raízes.</string>
    <string name="text_10passo_plantar_na_garrafa_de_5L">Regue as ortaliças até que as raízes alcancem,a água
\  dentro da garrafa depois é só repor a água, em algumas semanas você terá suas hortaliças pronta para consumo.</string>
    <string name="text_mesa_cano_PVC">Mesa de cano PVC</string>
    <string name="text_mesa_de_cano">Vamos fazer uma mesinha de centro com cano PVC?
\ É muito fácil e você vai precisar de poucos materiais.</string>
    <string name="materiais_mesa_de_cano">Cano de PVC de 25mm, serrinha para cortar cano, cola de cano, lixa grão 150, 8 joelhos de cano,
\ tinta spray na cor da sua preferência, 1 madeira de 80x60cm para o tampo, 4 braçadeiras da espessura do cano e 8 parafusos.</string>
    <string name="text_1passo_mesa_de_cano">Lixe as pontas dos canos e os joelhos por dentro.</string>
    <string name="text_2passo_mesa_de_cano">Lixe as pontas dos canos cortados por fora,
\ isso dará mais aderência para cola.</string>
    <string name="text_3passo_mesa_de_cano">Lixe os joelhos por dentro,
\ isso dará mais aderência para cola.</string>
    <string name="text_4passo_mesa_de_cano">Pegue 2 barras de 45cm e 2 de 2 barras de 65cm e cole os joelhos nos canos.</string>
    <string name="text_5passo_mesa_de_cano">Cole as barras de 30cm nas pontas das barras de 45cm.</string>
    <string name="text_6passo_mesa_de_cano">Cole as barras de 65cm com as junções de 45+30cm e feche os pés da mesa.</string>
    <string name="text_7passo_mesa_de_cano">Os pés da mesa devem ficar nesta posição.</string>
    <string name="text_8passo_mesa_de_cano">Pinte os pés da mesa com a tinta spray.</string>
    <string name="text_9passo_mesa_de_cano">Agora vamos colocar o tampo da mesa, meça 7,5cm de
\ cada lado do tampo para centralizar os pés ao tampo.</string>
    <string name="text_10passo_mesa_de_cano">Fixe com os parafusos as braçadeiras sobre os joelhos.</string>
    <string name="text_11passo_mesa_de_cano">Agora está pronta sua nova mesa de centro e com um designer inovador.</string>
    <string name="text_organizador">Organizador</string>
    <string name="text_organizador2">Vamos fazer um organizador para o banheiro ou quarto
\ com uma garrafa de produto de limpeza de 2 litros, super fácil e com materiais baratos.</string>
    <string name="materiais_organizador">Uma garrafa de produto de limpeza de 2 litros, tesoura,
\ cola quente, tecido, uma esteira de bambu ou palitos de
\ churrasquinho, cola de silicone liquída, uma tira de couro(pode ser de cinto) e um pedaço de papelão.</string>
    <string name="text_1passo_organizador">Pegue a garrafa de produto de limpeza retire o rótulo
\ e corte com a tesoura a altura desejada.</string>
    <string name="text_2passo_organizador">Pegue a esteira ou os palitos de churrasquinho corte
\ 2cm maior do que a altura da garrafa e cole em toda a
\  volta, usando a cola quente e a cola de silicone.</string>
    <string name="text_3passo_organizador">Pegue um tecido da sua preferência com o comprimento
\ para fechar a volta da garrafa sobrando 2cm, a altura do
\ tecido deve ser 10cm maior que a altura total da garrafa, em uma das pontas do tecido faça uma barra de 2cm
\ e coloque a cola de silicone.</string>
    <string name="text_4passo_organizador">Pegue o tecido e cole com a cola de silicone a parte que
\ foi feita a barra a 4cm da boca da garrafa e o resto do
\ tecido vai colocando para dentro da garrafa para fazer
\ o forro, faça até cobrir toda circuferência da garrafa,
\ no final faça uma barra lateral na parte de fora para
\fazer o acabamento.</string>
    <string name="text_5passo_organizador">Agora faça um círculo com o papelão de um tamanho
\ menor que a boca do organizador, forre o círculo de papelão  com o tecido e coloque dentro do organizardor.</string>
    <string name="text_6passo_organizador">Deve ficar dessa forma o forro do organizador.</string>
    <string name="text_7passo_organizador">Agora vamos pegar a tira de couro arredondar as
\ pontas com a tesoura e colar com a cola quente na
\ parte do bambu do organizador.</string>
    <string name="text_8passo_organizador">Finalizado o organizador é só escolher o seu local, uma
\ ótima idéia para seu ambiente ficar sempre organizado.</string>
    <string name="text_telha_garrafa">Telha de Garrafa</string>
    <string name="text_telha_garrafa2">Vamos construir um segmento de telha de garrafa pet,
\ que pode ser adaptada no telhado de uma casa ou para
\ um viveiro de plantas.Lembrando que essas medidas
\ estão adaptadas para um telhado com telhas de 5mm
\ de espeçura 1,53x1,10cm , as medidas devem
\ atender as suas necessidades.</string>
    <string name="text_materiais_telha_garrafa">Vamos precisar de 72 garrafas pet transparentes,
\ grampeador de papel, grampeador de madeira, pregos
\ 12x12, parafusos de madeira tipo philips, furadeira,
\ chave philips ou parafusadeira, 2 ripas de madeira de
\ pinos com 1,02m e 3 ripas com 1m, um pedaço de tábua
\ de pinos, caneta, trena, tesoura, estilete, cola de madeira, martelo e uma serrinha ou serrote.</string>
    <string name="text_1passo_telha_garrafa">Serre as ripas de acordo com sua necessidade,
\ nesse projeto vamos usar 2 ripas de 1,02cm e 3 ripas de 1m.</string>
    <string name="text_2passo_telha_garrafa">Pegue a tábua de madeira faça 8 círculos de 100mm de
\ diâmetro, faça um ponto no meio do círculo, ele será
\ uma marcação de referêcia mais tarde, serre os círculos
\ e depois corte todos ao meio, nas pontas faça um furo a 45° com a furadeira para pregar na ripa.</string>
    <string name="text_3passo_telha_garrafa">Pegue 6 metades do círculo e coloque cola de madeira,
\ meça 1,25cm da ripa e pregue um semi círculo, agora
\ meça 17,5cm do meio do semi círculo que foi pregado e
\ faça um risco, no risco você vai posicionar o meio
\ do próximo semi círculo, a medida de 17,5 entre cada
\ meio círculo você terá como referência o ponto feito no meio do semi círculo para pregar os próximos, pregue os
\ semi círculos e pregue na ripa.</string>
    <string name="text_4passo_telha_garrafa">As ripas com os semi círculos devem ficar assim.</string>
    <string name="text_5passo_telha_garrafa">Agora pegue as ripas de 1,02m e em cada ponta
\ coloque um pedacinho de ripa de 10cm, depois você vai
\ medir 16,5cm e parafuse a ripa com os semi círculos,
faça isso na outra ponta também, e entre elas coloque a
outra ripa com os semi círculos, fechando o quadrado.</string>
    <string name="text_6passo_telha_garrafa">O quadro deve ficar assim.</string>
    <string name="text_7passo_telha_garrafa">Agora vamos cortar as garrafas, corte a garrafa
\ como na imagem abaixo</string>
    <string name="text_8passo_telha_garrafa">Agora corte a garrafa ao meio bem na marca na
\ vertical, que é a marca da forma que é feita a garrafa, segue imagem abaixo.</string>
    <string name="text_9passo_telha_garrafa">Agora vamos unir as garrafas na vertical, una
\ a ponta do fundo da garrafa em cima da parte da boca da garrafa com auxílio
\ do grampeador de papel, una 6 partes dessa forma até ter 12 calhas.Se você quiser pode colocar
\ silicone para vedar melhor.</string>
    <string name="text_10passo_telha_garrafa">Pegue as calhas e fixe com o grampeador de madeira
\ nos semi círculos, certifique-se que todas as calhas estejam no mesmo sentido, onde a água escoada
\ não entre por alguma fresta, fixe todas até fechar o quadro.</string>
    <string name="text_11passo_telha_garrafa">Agora coloque as partes que ficam em cima todas no mesmo sentido.</string>
    <string name="text_12passo_telha_garrafa">Telha pronta, agora é só montar seu telhado e usá-las.</string>
    <string name="text_vaso1">Vaso de Balde</string>
    <string name="text_vaso2">Vamos produzir um vaso para colocar uma planta, super
\ fácil, com poucos materiais e combina em vários ambientes.</string>
    <string name="materiais_vaso">Um balde, tesoura, estilete, cola quente, prendedor de
\ roupa de madeira, cordão grosso de sisal,
\ tinta verniz transparente, barbante de algodão espessura média, cordão fino de sisal e um pincel.</string>
    <string name="text_1passo_vaso">Retire a borda do balde com auxílio do estilete, retire
a alça, e deixe a borda reta.   </string>
    <string name="text_2passo_balde">O balde deve ficar assim.</string>
    <string name="text_3passo_balde">Retire o ferrinho do prendedor, cole com a cola quente as
\ metades de prendedor por toda a volta do balde na parte de baixo e a boca do balde.</string>
    <string name="text_4passo_balde">Na parte do meio do balde passe o cordão de sisal grosso até cobrir tudo, passe com o pincel o verniz.</string>
    <string name="text_5passo_balde">Pegue o cordão de algodão e faça uma volta entre os
\ prendedores e o cordão de sisal colando com a cola quente, faça na parte de baixo também.</string>
    <string name="text_6passo_balde">Agora corte 6 pedaços iguais do cordão de sisal grosso
\ e una com cola quente, meça 4cm do cordão e enrrole a
\ corda de sisal fina, faça mais um igual, elas serão
\ a alça enfeite do vaso, na parte que ficou sem o sisal
\ enrrolado separe os fios para ficar com aparencia de corda desfiada.</string>
</resources>